readability fixes and details

--- a/css/base.css
+++ b/css/base.css
@@ -127,7 +127,8 @@
  				flex-direction: column;
  				align-items: flex-start;
  				padding-top: 5rem;
-
+				line-height: 1.3;
+				
  				>a {
  					text-decoration: none;
  					color: #b4b2b2;
@@ -269,6 +270,7 @@
  			row-gap: 4rem;
  			column-gap: 3rem;
 
+
  			.card {
  				flex-grow: 1;
  				padding: 15%;
@@ -331,9 +333,11 @@
  					margin: 2rem 0;
  					display: none;
 
+		 				
  					>p {
  						letter-spacing: 0.025rem;
  						line-height: 1.15;
+						opacity: 0.85;
  					}
  				}
 
@@ -366,11 +370,10 @@
  					}
 
 
-
  					audio {
  						display: block;
  						flex-grow: 2;
- 						max-width: 45%;
+ 						/* max-width: 45%; */
 
  						@media only screen and (width <=1024px) {
  							padding: 1rem 0;
@@ -404,7 +407,7 @@
  						gap: 0rem;
 
  						>h5 {
- 							font-family: 'InterDisplay-Bold';
+ 							font-family: 'InterDisplay-Regular';
  							font-size: 1.25rem;
  							letter-spacing: 0.25rem;
  							margin-bottom: 2rem;
@@ -466,6 +469,8 @@
  						span {
  							display: block;
  							padding: 1rem 0;
+							line-height: 1.75;
+							font-size: 1.375rem;
 
  							@media only screen and (width >=1500px) {
  								max-width: 75vw;
